# madaminu

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md
server/: Dockerfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_initial.py  001_v3_initial.py  002_add_initial_opening_phase_types.py  002_add_victim_image.py  003_add_character_profile_fields.py  004_add_device_id.py  005_add_is_ready.py  006_add_name_kana_and_public_info.py  007_add_turn_count_and_planning_phase.py  008_add_cascade_to_foreign_keys.py  add_discovery_to_evidencesource.py  ff73e85ff97b_add_room_name_to_games.py  v3_schema_extensions.py
server/scripts/: generate_logo.py  preview_map.py  reset_db.py  simulate_batch.py  simulate_blind.py  simulate_game.py  start.sh  test_scenario_gen.py
server/src/madaminu/: config.py  main.py
server/src/madaminu/db/: __init__.py  database.py
server/src/madaminu/events/: __init__.py  bus.py  types.py
server/src/madaminu/llm/: client.py  prompts.py
server/src/madaminu/models/: __init__.py  base.py  evidence.py  game.py  game_ending.py  investigation_selection.py  note.py  payment.py  (+4 more)
server/tests/: conftest.py  test_4player_flow.py  test_bug_fixes.py  test_characters.py  test_e2e.py  test_investigation.py  test_llm.py  test_map_builder.py  test_map_renderer.py  test_map_validation.py  test_models.py  test_phase_adjustment.py  test_phase_manager.py  test_rejoin.py  test_room_name.py  test_rooms.py  test_scenario.py  test_speech_manager.py  test_speech_preempt.py  test_timer_resilience.py  test_voting_ending.py  test_websocket.py
(+118 files in other folders)
