[project]
name = "madaminu"
version = "0.1.0"
description = "Madaminu - AI-powered murder mystery game server"
requires-python = ">=3.13.1"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.21.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "openai>=2.29.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pillow>=12.1.1",
    "json-repair>=0.58.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["uv_build>=0.10.8"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["B008", "B017"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
